# linux-broadband-SIM-UI-UX

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QA_PHONE_TEST_CHECKLIST.md  README.md  SECURITY.md  snapcraft.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tauri-build.yml  tauri-release.yml
docs/: DEVELOPER_GUIDE.md
sim/: README.md
sim/src/: global.css  index.html  main.js  styles.css  tauri-api.js
sim/src-tauri/: Cargo.toml  tauri.conf.json
sim/src-tauri/src/: lib.rs  main.rs
sim/src/components/contacts/: contacts.css  contacts.html  contacts.js
sim/src/components/network/: network.css  network.html  network.js
sim/src/components/phone/: phone.css  phone.html  phone.js
sim/src/components/sidebar/: sidebar.css  sidebar.html  sidebar.js
sim/src/components/sms/: sms.css  sms.html  sms.js
sim/src/components/topbar/: topbar.css  topbar.html  topbar.js
sim/src/components/ussd/: ussd.css  ussd.html  ussd.js
src/: lib.rs
