[package]
name = "sim_broadband_gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "sim_broadband_gui"
path = "src/lib.rs"

[dependencies]
zbus = { version = "3", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"